store token in cookie