@@ -9,6 +9,7 @@ import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.CorsConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -47,19 +48,19 @@ public class WebSecurityConfig {
                             .requestMatchers(HttpMethod.GET, "/admin").hasRole("ADMIN")
                             .anyRequest().authenticated();
                 });
-//        http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
-//            @Override
-//            public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
-//                CorsConfiguration configuration = new CorsConfiguration();
-//                configuration.setAllowedOrigins(List.of("*"));
-//                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-//                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-//                configuration.setExposedHeaders(List.of("x-auth-token"));
-//                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//                source.registerCorsConfiguration("/**", configuration);
-//                httpSecurityCorsConfigurer.configurationSource(source);
-//            }
-//        });
+        http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
+            @Override
+            public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOrigins(List.of("*"));
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+                configuration.setExposedHeaders(List.of("x-auth-token"));
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                httpSecurityCorsConfigurer.configurationSource(source);
+            }
+        });
         return http.build();
     }
 }
